# sammoku-narabe-haskell

./: .gitignore  README.md  SammokuNarabe.cabal  stack.yaml
app/: Main.hs
