name:                SammokuNarabe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kakkun61/sammoku-narabe-haskell
license:             BSD3
license-file:        LICENSE
author:              Kazuki Okamoto
maintainer:          kazuki.okamoto@kakkun61.com
copyright:           2017 Kazuki Okamoto
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable SammokuNarabe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base, array
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/SammokuNarabe
